--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,8 +3,8 @@
 
 favicon = "images/favicon.png"
 # logo module: https://github.com/gethugothemes/hugo-modules/tree/master/images#logo-implementation
-logo = "images/logoo.png"
-logo_darkmode = "images/logoo-darkmode.png"
+logo = "images/logo.png"
+logo_darkmode = "images/logo-darkmode.png"
 # use `px` or `x` with logo_width, example: "100px".
 # Note: logo_width is not work with .svg file
 logo_width = "160px"
