--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://catto.in/"
+baseURL = "/"
 # Title of your website (required).
 title = "Catto"
 # Your theme name
